--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "ably": "^1.2.17",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
     "html-react-parser": "^1.4.9",
     "moment": "^2.29.1",
     "next": "latest",
+    "next-pwa": "^5.4.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
     "react-multi-carousel": "^2.8.0",
+    "react-router-dom": "^5.2.0",
     "sass": "^1.49.9",
-    "tachyons": "^4.12.0",
-    "ably": "^1.2.17"
+    "tachyons": "^4.12.0"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
