--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-multi-carousel": "^2.8.0",
     "react-router-dom": "^5.2.0",
     "sass": "^1.49.9",
+    "sharp": "^0.30.3",
     "tachyons": "^4.12.0"
   },
   "devDependencies": {
